[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui.workspace = true
gpui-platform.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
components = { path = "../components" }
split = { path = "../split" }

[lints.clippy]
all = "warn"
