[package]
name = "components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
danubius.workspace = true
zalmoxis.workspace = true

[lints.clippy]
all = "warn"